Fixes sidebar icons being too large

--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@ artist picture { margin: 10px; }
 artist .no-cover { padding: 40px; }
 
 /* Sidebar */
-sidebar preferencesgroup:nth-child(2) row:nth-child(2) image,
-sidebar list row:nth-child(5) image { transform: scale(1.25); }
-sidebar preferencesgroup:nth-child(3) row image,
-sidebar list row:nth-child(n+7) image { transform: scale(1.3); }
+sidebar preferencesgroup:nth-child(2) row:nth-child(2) box:first-child > image,
+sidebar list row:nth-child(5) > box:first-child > image:first-child { transform: scale(1.25); }
+sidebar row revealer > box button image,
+sidebar preferencesgroup:nth-child(3) row box:first-child > image,
+sidebar list row:nth-child(n+7) > box:first-child > image:first-child { transform: scale(1.3); }
 sidebar row revealer > box { border-spacing: 6px; }
 sidebar row revealer > box button {
   -gtk-icon-size: 12px;
